# knotorious-tantivy

./: Cargo.toml
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  RefineResults.tsx  ResultsTable.tsx  SearchForm.tsx
frontend/lib/: api.ts
src/: api.rs  dump.rs  indexer.rs  main.rs  query_parser.rs  schema.rs  search.rs  search_service.rs
