[package]
name = "knotorious_tantivy"
version = "0.1.0"
edition = "2024"


[dependencies]
tantivy = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
csv = "1.3"
walkdir = "2.5"
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
